Ensure maximim scalability by giving configurable methods for requeueing rollups as query limits are approached

--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -23,7 +23,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   private static Integer maxQueryRowOverride;
 
   private static Boolean isCDC = false;
-
+  private static Boolean isDeferralAllowed = true;
+  private static Integer stackDepth = 0;
   private static final String CONTROL_ORG_DEFAULTS = 'Org_Defaults';
 
   private final List<SObject> calcItems;
@@ -46,6 +47,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   private Boolean isNoOp;
   private Map<SObjectType, Set<String>> lookupObjectToUniqueFieldNames;
   private List<SObject> lookupItems;
+  private RollupControl__mdt rollupControl;
 
   /**
    * receiving an interface/subclass from a property get/set (from the book "The Art Of Unit Testing") is an old technique;
@@ -81,6 +83,16 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         rollups = new List<Rollup>();
       }
       return rollups;
+    }
+    set;
+  }
+
+  private List<Rollup> deferredRollups {
+    get {
+      if (deferredRollups == null) {
+        deferredRollups = new List<Rollup>();
+      }
+      return deferredRollups;
     }
     set;
   }
@@ -238,6 +250,9 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       }
 
       String countQuery = getQueryString(rollup.lookupObj, new List<String>{ 'Count()' }, 'Id', '=');
+      if(countQuery.contains('ALL ROWS')) {
+        countQuery = countQuery.replace('ALL ROWS', '');
+      }
       if (queryCountsToLookupIds.containsKey(countQuery)) {
         queryCountsToLookupIds.get(countQuery).addAll(uniqueLookupFields);
       } else {
@@ -395,6 +410,9 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     // otherwise, kick off a batch to fetch the calc items and then chain into the regular code path
     SObjectType calcItemType = getSObjectTypeFromName(calcItemSObjectName);
     String countQuery = getQueryString(calcItemType, new List<String>{ 'Count()' }, 'Id', '!=');
+    if(countQuery.contains('ALL ROWS')) {
+      countQuery.replace('ALL ROWS', '');
+    }
     Set<Id> objIds = new Set<Id>(); // get everything that doesn't have a null Id - a pretty trick
     Integer amountOfCalcItems = Database.countQuery(countQuery);
 
@@ -1328,15 +1346,22 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
   /** end global-facing section, begin public/private static helpers */
 
-  public static String getQueryString(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String lookupFieldOnLookupObject, String equality) {
+  public static String getQueryString(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String lookupFieldOnLookupObject, String equality, String optionalWhereClause) {
     // again noting the coupling for consumers of this method
     // "objIds" is required to be present in the scope where the query is run
     String baseQuery = 'SELECT ' + String.join(uniqueQueryFieldNames, ',') + '\nFROM ' + sObjectType + '\nWHERE ' + lookupFieldOnLookupObject + ' ' + equality + ' :objIds';
+    if(String.isNotBlank(optionalWhereClause)) {
+      baseQuery += optionalWhereClause;
+    }
     if(sObjectType == Task.SObjectType || sObjectType == Event.SObjectType) {
       // handle archived rows
-      baseQuery += ' AND IsDeleted = false ALL ROWS';
+      baseQuery += '\nAND IsDeleted = false ALL ROWS';
     }
     return baseQuery;
+  }
+
+  public static String getQueryString(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String lookupFieldOnLookupObject, String equality) {
+    return getQueryString(sObjectType, uniqueQueryFieldNames, lookupFieldOnLookupObject, equality, null);
   }
 
   private static void flattenBatches(Rollup outerRollup, List<Rollup> rollups) {
@@ -1642,6 +1667,8 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     // there are multiple spots where testOverrideData can be supplied, which is why it's necessary to pass this value
     if (testOverrideData != null) {
       return testOverrideData;
+    } else if(whereField == RollupControl__mdt.Id) {
+      return RollupControl__mdt.getInstance((Id) whereValue);
     }
     List<RollupControl__mdt> rollupControls = RollupControl__mdt.getAll().values();
     for (RollupControl__mdt rollupControl : rollupControls) {
@@ -1650,10 +1677,10 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       }
     }
 
-    return getSensibleLimitsDefault();
+    return getSensibleControlDefault();
   }
 
-  private static RollupControl__mdt getSensibleLimitsDefault() {
+  private static RollupControl__mdt getSensibleControlDefault() {
     RollupControl__mdt sensibleDefault = RollupControl__mdt.getInstance(CONTROL_ORG_DEFAULTS);
     if (sensibleDefault == null) {
       // this *should* be impossible, since the record is included on install, but ...
@@ -1661,6 +1688,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         DeveloperName = CONTROL_ORG_DEFAULTS,
         MaxLookupRowsBeforeBatching__c = Limits.getLimitDmlRows() / 3,
         MaxLookupRowsForQueueable__c = Limits.getLimitDmlRows() / 2,
+        MaxQueryRows__c = 100,
         ShouldAbortRun__c = false,
         ShouldRunAs__c = 'Queueable'
       );
@@ -1688,7 +1716,13 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   protected void process(List<Rollup> rollups) {
     this.getFieldNamesForRollups(rollups);
     Map<String, SObject> updatedLookupRecords = new Map<String, SObject>();
-    for (Rollup rollup : rollups) {
+    for (Integer index = 0; index < rollups.size(); index++) {
+      // for each iteration, ensure we're not operating beyond the bounds of our query limits
+      Rollup rollup = rollups[index];
+      if(this.hasExceededCurrentRollupQueryLimit(rollup.rollupControl)) {
+        this.deferredRollups.add(rollup);
+        continue;
+      }
       Map<String, List<SObject>> calcItemsByLookupField = this.getCalcItemsByLookupField(rollup);
       List<SObject> lookupItems = new List<SObject>();
       Set<String> lookupItemKeys = new Set<String>(calcItemsByLookupField.keySet());
@@ -1711,6 +1745,28 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     }
 
     DML.doUpdate(updatedLookupRecords.values());
+
+    this.processDeferredRollups();
+  }
+
+  private Boolean hasExceededCurrentRollupQueryLimit(RollupControl__mdt control) {
+    return Limits.getQueries() >= control?.MaxQueryRows__c && isDeferralAllowed;
+  }
+
+  private void processDeferredRollups() {
+    if(this.deferredRollups.isEmpty() == false && isDeferralAllowed && stackDepth < this.rollupControl?.MaxRollupRetries__c) {
+      stackDepth++;
+      // tragic, but necessary due to limits on requeueing allowed during testing
+      isDeferralAllowed = Test.isRunningTest() == false;
+      this.rollups.clear();
+      this.rollups.addAll(this.deferredRollups);
+      this.deferredRollups.clear();
+      if(System.isBatch()) {
+        Database.executeBatch(this);
+      } else {
+        System.enqueueJob(this);
+      }
+    }
   }
 
   private List<SObject> filter(List<SObject> calcItems, Evaluator eval, Rollup__mdt rollupMetadata) {
@@ -1788,6 +1844,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         ? getRollupControlKey(rollup.invokePoint, rollup.opFieldOnCalcItem, rollup.lookupObj, rollup.opFieldOnLookupObject)
         : rollup.rollupControlId;
       RollupControl__mdt rollupSpecificControl = getSingleControlOrDefault(controlWhereField, controlWhereValue, specificControl);
+      rollup.rollupControl = rollupSpecificControl;
 
       if (rollupSpecificControl.ShouldAbortRun__c) {
         this.rollups.remove(index);
