Remove ALL ROWS string duplication when using countQuery in Rollup

--- a/rollup/main/default/classes/Rollup.cls
+++ b/rollup/main/default/classes/Rollup.cls
@@ -251,9 +251,6 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       }
 
       String countQuery = getQueryString(rollup.lookupObj, new List<String>{ 'Count()' }, 'Id', '=');
-      if(countQuery.contains('ALL ROWS')) {
-        countQuery = countQuery.replace('ALL ROWS', '');
-      }
       if (queryCountsToLookupIds.containsKey(countQuery)) {
         queryCountsToLookupIds.get(countQuery).addAll(uniqueLookupFields);
       } else {
@@ -264,7 +261,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     Integer totalCountOfRecords = 0;
     for (String countQuery : queryCountsToLookupIds.keySet()) {
       Set<String> objIds = queryCountsToLookupIds.get(countQuery);
-      totalCountOfRecords += Database.countQuery(countQuery);
+      totalCountOfRecords += getCountFromDb(countQuery, objIds);
     }
 
     Boolean shouldRunAsBatch =
@@ -411,11 +408,9 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     // otherwise, kick off a batch to fetch the calc items and then chain into the regular code path
     SObjectType calcItemType = getSObjectTypeFromName(calcItemSObjectName);
     String countQuery = getQueryString(calcItemType, new List<String>{ 'Count()' }, 'Id', '!=');
-    if(countQuery.contains('ALL ROWS')) {
-      countQuery.replace('ALL ROWS', '');
-    }
-    Set<Id> objIds = new Set<Id>(); // get everything that doesn't have a null Id - a pretty trick
-    Integer amountOfCalcItems = Database.countQuery(countQuery);
+
+    Set<String> objIds = new Set<String>(); // get everything that doesn't have a null Id - a pretty trick
+    Integer amountOfCalcItems = getCountFromDb(countQuery, objIds);
 
     // emptyRollup only used to call "getMaxQueryRows" below
     Rollup emptyRollup = new Rollup(RollupInvocationPoint.FROM_LWC);
@@ -847,15 +842,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     SObjectField countFieldOnOperationObject,
     SObjectType lookupSobjectType
   ) {
-    return countFromApex(
-      countFieldOnCalcItem,
-      lookupFieldOnCalcItem,
-      lookupFieldOnOperationObject,
-      countFieldOnOperationObject,
-      lookupSobjectType,
-      null,
-      null
-    );
+    return countFromApex(countFieldOnCalcItem, lookupFieldOnCalcItem, lookupFieldOnOperationObject, countFieldOnOperationObject, lookupSobjectType, null, null);
   }
 
   global static Rollup countFromApex(
@@ -982,7 +969,6 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     );
   }
 
-
   global static Rollup lastFromApex(
     SObjectField lastFieldOnCalcItem,
     SObjectField lookupFieldOnCalcItem,
@@ -1034,15 +1020,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     SObjectField maxFieldOnOperationObject,
     SObjectType lookupSobjectType
   ) {
-    return maxFromApex(
-      maxFieldOnCalcItem,
-      lookupFieldOnCalcItem,
-      lookupFieldOnOperationObject,
-      maxFieldOnOperationObject,
-      lookupSobjectType,
-      null,
-      null
-    );
+    return maxFromApex(maxFieldOnCalcItem, lookupFieldOnCalcItem, lookupFieldOnOperationObject, maxFieldOnOperationObject, lookupSobjectType, null, null);
   }
 
   global static Rollup maxFromApex(
@@ -1092,15 +1070,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     SObjectField minFieldOnOperationObject,
     SObjectType lookupSobjectType
   ) {
-    return minFromApex(
-      minFieldOnCalcItem,
-      lookupFieldOnCalcItem,
-      lookupFieldOnOperationObject,
-      minFieldOnOperationObject,
-      lookupSobjectType,
-      null,
-      null
-    );
+    return minFromApex(minFieldOnCalcItem, lookupFieldOnCalcItem, lookupFieldOnOperationObject, minFieldOnOperationObject, lookupSobjectType, null, null);
   }
 
   global static Rollup minFromApex(
@@ -1150,15 +1120,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     SObjectField sumFieldOnOpOject,
     SObjectType lookupSobjectType
   ) {
-    return sumFromApex(
-      sumFieldOnCalcItem,
-      lookupFieldOnCalcItem,
-      lookupFieldOnOperationObject,
-      sumFieldOnOpOject,
-      lookupSobjectType,
-      null,
-      null
-    );
+    return sumFromApex(sumFieldOnCalcItem, lookupFieldOnCalcItem, lookupFieldOnOperationObject, sumFieldOnOpOject, lookupSobjectType, null, null);
   }
 
   global static Rollup sumFromApex(
@@ -1347,14 +1309,29 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
   /** end global-facing section, begin public/private static helpers */
 
-  public static String getQueryString(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String lookupFieldOnLookupObject, String equality, String optionalWhereClause) {
+  public static String getQueryString(
+    SObjectType sObjectType,
+    List<String> uniqueQueryFieldNames,
+    String lookupFieldOnLookupObject,
+    String equality,
+    String optionalWhereClause
+  ) {
     // again noting the coupling for consumers of this method
     // "objIds" is required to be present in the scope where the query is run
-    String baseQuery = 'SELECT ' + String.join(uniqueQueryFieldNames, ',') + '\nFROM ' + sObjectType + '\nWHERE ' + lookupFieldOnLookupObject + ' ' + equality + ' :objIds';
-    if(String.isNotBlank(optionalWhereClause)) {
+    String baseQuery =
+      'SELECT ' +
+      String.join(uniqueQueryFieldNames, ',') +
+      '\nFROM ' +
+      sObjectType +
+      '\nWHERE ' +
+      lookupFieldOnLookupObject +
+      ' ' +
+      equality +
+      ' :objIds';
+    if (String.isNotBlank(optionalWhereClause)) {
       baseQuery += optionalWhereClause;
     }
-    if(sObjectType == Task.SObjectType || sObjectType == Event.SObjectType) {
+    if (sObjectType == Task.SObjectType || sObjectType == Event.SObjectType) {
       // handle archived rows
       baseQuery += '\nAND IsDeleted = false ALL ROWS';
     }
@@ -1363,6 +1340,13 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
   public static String getQueryString(SObjectType sObjectType, List<String> uniqueQueryFieldNames, String lookupFieldOnLookupObject, String equality) {
     return getQueryString(sObjectType, uniqueQueryFieldNames, lookupFieldOnLookupObject, equality, null);
+  }
+
+  private static Integer getCountFromDb(String countQuery, Set<String> objIds) {
+    if (countQuery.contains('ALL ROWS')) {
+      countQuery = countQuery.replace('ALL ROWS', '');
+    }
+    return Database.countQuery(countQuery);
   }
 
   private static void flattenBatches(Rollup outerRollup, List<Rollup> rollups) {
@@ -1668,7 +1652,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     // there are multiple spots where testOverrideData can be supplied, which is why it's necessary to pass this value
     if (testOverrideData != null) {
       return testOverrideData;
-    } else if(whereField == RollupControl__mdt.Id) {
+    } else if (whereField == RollupControl__mdt.Id) {
       return RollupControl__mdt.getInstance((Id) whereValue);
     }
     List<RollupControl__mdt> rollupControls = RollupControl__mdt.getAll().values();
@@ -1689,7 +1673,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         DeveloperName = CONTROL_ORG_DEFAULTS,
         MaxLookupRowsBeforeBatching__c = Limits.getLimitDmlRows() / 3,
         MaxLookupRowsForQueueable__c = Limits.getLimitDmlRows() / 2,
-        MaxQueryRows__c = 100,
+        MaxQueryRows__c = Limits.getLimitQueryRows() / 2,
         ShouldAbortRun__c = false,
         ShouldRunAs__c = 'Queueable'
       );
@@ -1720,7 +1704,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     for (Integer index = 0; index < rollups.size(); index++) {
       // for each iteration, ensure we're not operating beyond the bounds of our query limits
       Rollup rollup = rollups[index];
-      if(this.hasExceededCurrentRollupQueryLimit(rollup.rollupControl)) {
+      if (this.hasExceededCurrentRollupQueryLimit(rollup.rollupControl)) {
         this.deferredRollups.add(rollup);
         continue;
       }
@@ -1755,14 +1739,14 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   private void processDeferredRollups() {
-    if(this.deferredRollups.isEmpty() == false && isDeferralAllowed && stackDepth < this.rollupControl?.MaxRollupRetries__c) {
+    if (this.deferredRollups.isEmpty() == false && isDeferralAllowed && stackDepth < this.rollupControl?.MaxRollupRetries__c) {
       stackDepth++;
       // tragic, but necessary due to limits on requeueing allowed during testing
       isDeferralAllowed = Test.isRunningTest() == false;
       this.rollups.clear();
       this.rollups.addAll(this.deferredRollups);
       this.deferredRollups.clear();
-      if(System.isBatch()) {
+      if (System.isBatch()) {
         Database.executeBatch(this);
       } else {
         System.enqueueJob(this);
