Finish fixes for #26 and #38 by adding CMDT-driven invocable and deferred flow processing for Rollup

--- a/rollup/main/default/classes/RollupFlowBulkSaver.cls
+++ b/rollup/main/default/classes/RollupFlowBulkSaver.cls
@@ -1,5 +1,10 @@
-public inherited sharing class RollupFlowBulkSaver {
-    public RollupFlowBulkSaver() {
+global without sharing class RollupFlowBulkSaver {
+  private RollupFlowBulkSaver() {
+    // only used for static invocable
+  }
 
-    }
+  @InvocableMethod(category='Rollups' label='Process Deferred Rollups')
+  global static void processDeferredRollups() {
+    Rollup.processStoredFlowRollups();
+  }
 }
